--- a/YPTabBarController/Demo/ViewController.xib
+++ b/YPTabBarController/Demo/ViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
             <connections>
+                <outlet property="button" destination="JXH-VQ-5Cj" id="iR7-Ce-pid"/>
                 <outlet property="label" destination="GY1-RG-W8z" id="m4w-B8-ZuV"/>
                 <outlet property="view" destination="NR1-B2-tt7" id="wyw-bR-ne4"/>
             </connections>
@@ -26,9 +27,22 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JXH-VQ-5Cj">
+                    <rect key="frame" x="118" y="362" width="138" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="138" id="K9X-QJ-h42"/>
+                        <constraint firstAttribute="height" constant="30" id="QXQ-Ue-dfQ"/>
+                    </constraints>
+                    <state key="normal" title="跳转"/>
+                    <connections>
+                        <action selector="buttonClicked:" destination="-1" eventType="touchUpInside" id="dNR-ur-CfN"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="JXH-VQ-5Cj" firstAttribute="centerX" secondItem="NR1-B2-tt7" secondAttribute="centerX" id="9FI-22-cEQ"/>
+                <constraint firstItem="JXH-VQ-5Cj" firstAttribute="top" secondItem="GY1-RG-W8z" secondAttribute="bottom" constant="18" id="Z2C-XT-GxX"/>
                 <constraint firstItem="GY1-RG-W8z" firstAttribute="centerY" secondItem="NR1-B2-tt7" secondAttribute="centerY" id="d0g-QU-626"/>
                 <constraint firstItem="GY1-RG-W8z" firstAttribute="centerX" secondItem="NR1-B2-tt7" secondAttribute="centerX" id="dCS-D0-5g0"/>
             </constraints>
