--- a/YPTabBarController/Demo/ViewController.xib
+++ b/YPTabBarController/Demo/ViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
@@ -18,7 +19,6 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GY1-RG-W8z">
-                    <rect key="frame" x="118" y="323" width="138" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="9Ld-Eb-Dhw"/>
                         <constraint firstAttribute="width" constant="138" id="Yzf-Lz-Kzt"/>
@@ -28,7 +28,6 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JXH-VQ-5Cj">
-                    <rect key="frame" x="118" y="362" width="138" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="138" id="K9X-QJ-h42"/>
                         <constraint firstAttribute="height" constant="30" id="QXQ-Ue-dfQ"/>
@@ -39,14 +38,13 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="JXH-VQ-5Cj" firstAttribute="centerX" secondItem="NR1-B2-tt7" secondAttribute="centerX" id="9FI-22-cEQ"/>
                 <constraint firstItem="JXH-VQ-5Cj" firstAttribute="top" secondItem="GY1-RG-W8z" secondAttribute="bottom" constant="18" id="Z2C-XT-GxX"/>
                 <constraint firstItem="GY1-RG-W8z" firstAttribute="centerY" secondItem="NR1-B2-tt7" secondAttribute="centerY" id="d0g-QU-626"/>
                 <constraint firstItem="GY1-RG-W8z" firstAttribute="centerX" secondItem="NR1-B2-tt7" secondAttribute="centerX" id="dCS-D0-5g0"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
             <point key="canvasLocation" x="479.5" y="270.5"/>
         </view>
     </objects>
