--- a/YPTabBarController/Demo/ViewController.xib
+++ b/YPTabBarController/Demo/ViewController.xib
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,6 +22,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GY1-RG-W8z">
+                    <rect key="frame" x="118.5" y="323" width="138" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="9Ld-Eb-Dhw"/>
                         <constraint firstAttribute="width" constant="138" id="Yzf-Lz-Kzt"/>
@@ -28,6 +32,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JXH-VQ-5Cj">
+                    <rect key="frame" x="118.5" y="362" width="138" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="138" id="K9X-QJ-h42"/>
                         <constraint firstAttribute="height" constant="30" id="QXQ-Ue-dfQ"/>
@@ -45,7 +50,7 @@
                 <constraint firstItem="GY1-RG-W8z" firstAttribute="centerY" secondItem="NR1-B2-tt7" secondAttribute="centerY" id="d0g-QU-626"/>
                 <constraint firstItem="GY1-RG-W8z" firstAttribute="centerX" secondItem="NR1-B2-tt7" secondAttribute="centerX" id="dCS-D0-5g0"/>
             </constraints>
-            <point key="canvasLocation" x="479.5" y="270.5"/>
+            <point key="canvasLocation" x="-284" y="81"/>
         </view>
     </objects>
 </document>
