--- a/YPTabBarController/Demo/ViewController.xib
+++ b/YPTabBarController/Demo/ViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -37,7 +37,7 @@
                         <constraint firstAttribute="width" constant="138" id="K9X-QJ-h42"/>
                         <constraint firstAttribute="height" constant="30" id="QXQ-Ue-dfQ"/>
                     </constraints>
-                    <state key="normal" title="跳转"/>
+                    <state key="normal" title="返回"/>
                     <connections>
                         <action selector="buttonClicked:" destination="-1" eventType="touchUpInside" id="dNR-ur-CfN"/>
                     </connections>
